[package]
name = "r_cube"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.3", features = ["v4", "serde"] }
bollard = "*"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
